--- a/.gitignore
+++ b/.gitignore
@@ -158,8 +158,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
-/Charts/AAPL.png
-/Charts/GME.png
-/Charts/META.png
-/Charts/MSFT.png
-/Charts/SONY.png
+/Charts/
